# storm-daenerys-front

./: Cargo.toml  README.md  build.rs
src/: api.rs  defines.rs  error.rs  lib.rs  main.rs  types.rs  ui.rs  worker.rs
src/api/: acl.rs  directory.rs  group.rs  quota.rs  root.rs  user.rs
src/error/: apperror.rs
src/types/: acl.rs  directory.rs  group.rs  user.rs
src/ui/: daenerys.rs  state.rs
src/ui/pages/: main.rs
src/ui/pages/main/: panel_bottom.rs  panel_central.rs  panel_left.rs  panel_right.rs  panel_top.rs  ui.rs
src/ui/pages/main/panel_bottom/: ui.rs
src/ui/pages/main/panel_central/: directory.rs  group.rs  ui.rs
src/ui/pages/main/panel_central/directory/: acl.rs  create.rs  ui.rs
src/ui/pages/main/panel_central/directory/acl/: add_group.rs  add_user.rs  ui.rs
src/ui/pages/main/panel_central/directory/name/: ui.rs
src/ui/pages/main/panel_central/directory/quota/: ui.rs
src/ui/pages/main/panel_central/du/: ui.rs
src/ui/pages/main/panel_central/group/: create.rs  member.rs  ui.rs
src/ui/pages/main/panel_central/group/member/: add_user.rs  ui.rs
src/ui/pages/main/panel_central/home/: ui.rs
src/ui/pages/main/panel_left/: directory.rs  group.rs  quota.rs  ui.rs
src/ui/pages/main/panel_right/: group.rs  ui.rs
src/ui/pages/main/panel_top/: quota.rs  ui.rs
src/worker/: builder.rs  message.rs  worker.rs
