[package]
build = "build.rs"
name = "storm_daenerys_front"
version = "0.1.0"
authors = ["Thomas Bellembois <thomas.bellembois@uca.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "storm_daenerys_front"
path = "src/main.rs"

[lib]
name = "storm_daenerys_front"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["svg", "all_loaders"]}
ehttp = "0.3.0"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
number_prefix = "0.4.0"
poll-promise = "0.3.0"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#storm_daenerys_common = { path = "../storm-daenerys-common" }
storm_daenerys_common = { git = "https://github.com/tbellembois/storm-daenerys-common.git" }
